[package]
name = "remote_file_system"
version = "0.1.0"
edition = "2024"

 [dependencies]
 fuser = "0.16.0"
 libc = "0.2"
 env_logger = "0.11.8"
 log = "0.4.29"
 serde.workspace = true
 serde_json = "1.0"  
 reqwest = {version = "0.12.25", features = ["blocking", "json"]}
 shared = { path = "../shared" }

# [package]
# name = "remote_file_system"
# version = "0.1.0"
# edition = "2021"

# [dependencies]
# fuser = "0.12" # o versione compatibile
# libc = "0.2"
# reqwest = { version = "0.11", features = ["blocking", "json"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# env_logger = "0.10"
# log = "0.4"
# shared = { path = "../shared" }