[package]
name = "remote_file_system"
version = "0.1.0"
edition = "2024"

 [dependencies]
 fuser = "0.16.0"
 libc = "0.2"
 env_logger = "0.11.8"
 log = "0.4.29"
 serde.workspace = true
 serde_json = "1.0"  
 reqwest = {version = "0.12.25", features = ["blocking", "json"]}
 shared = { path = "../shared" }

clap = { version = "4.4", features = ["derive"] } # Parsing argomenti CLI
lru = "0.12"                                     # Cache LRU
daemonize = "0.5"                                # Esecuzione in background
ctrlc = "3.4"                                    # Gestione segnali (Graceful Shutdown)
tempfile = "3.8"                                 # Supporto file grandi (buffer su disco)