#[package]
# name = "rfs_server"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# # Per il server HTTP RESTful
# actix-web = "4" 

# # Per runtime asincrono (necessario per actix e I/O asincrono)
# tokio = { version = "1", features = ["full"] } 

# # Per la serializzazione/deserializzazione JSON
# serde.workspace = true

# # Per lo streaming dei file (necessario per FramedRead e BytesCodec)
# tokio-util = { version = "0.7", features = ["codec"] } 

# # Per i tratti degli stream asincroni (come StreamExt per payload.next())
# futures-util = "0.3"


# # Per l'import di tipi di dati comuni
# shared = { path = "../shared" }

[package]
name = "rfs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
shared = { path = "../shared" }