[package]
name = "rfs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
shared = { path = "../shared" }
log = "0.4.29"